--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
             <div id="formulario">
                 <form action="#" method="post">
                     <h1>Login</h1>
-                    <input type="email" name="email" id="email" placeholder="E-mail">
-                    <input type="password" name="password" id="pswd" placeholder="Senha" minlength="8">
+                    <div class="cont-input">
+                        <label for="email"><span class="material-symbols-outlined">vpn_key</span></label>
+                        <input type="email" name="email" id="email" placeholder="E-mail">
+                    </div>
+                    <div class="cont-input">
+                        <label for="pswd"><span class="material-symbols-outlined">mail</span></label>
+                        <input type="password" name="password" id="pswd" placeholder="Senha" minlength="8">
+                    </div>
                     <input type="submit" value="Entrar">
                     <p><a href="#">Esqueceu a senha?</a></p>
                 </form>
