--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <form action="#" method="post">
                     <h1>Login</h1>
                     <div class="cont-input">
-                        <label for="email"><span class="material-symbols-outlined">vpn_key</span></label>
+                        <label for="email"><span class="material-symbols-outlined">mail</span></label>
                         <input type="email" name="email" id="email" placeholder="E-mail">
                     </div>
                     <div class="cont-input">
-                        <label for="pswd"><span class="material-symbols-outlined">mail</span></label>
+                        <label for="pswd"><span class="material-symbols-outlined">vpn_key</span></label>
                         <input type="password" name="password" id="pswd" placeholder="Senha" minlength="8">
                     </div>
                     <input type="submit" value="Entrar">
